tests/errors/typecheck/test_tc_05_undef_func.pc
#import std.console;
int main() {
    foo();
}
